hphp/hack/test/typecheck/map_non_static.php.exp
File "map_non_static.php", line 8, characters 45-49:
Expected constant expression for initializer (Parsing[1002])
File "map_non_static.php", line 8, characters 45-47:
This call is not allowed because its capabilities are incompatible with the context (Typing[4390])
  File "map_non_static.php", line 8, characters 34-65:
  From this declaration, the context of this function body provides the capability set {}
  File "map_non_static.php", line 3, characters 10-12:
  But the function being called requires the capability set {AccessGlobals, IO, ImplicitPolicyLocal, RxLocal, SystemLocal, WriteProperty}
